package tp2.exo3;

import java.util.List;

public class Groupe {

	private List<Etudiant> l;
	
	public Groupe() {
		// TODO Auto-generated constructor stub
	}
	
	
}
