@startuml

class Etudiant {
    -Map<String, List<Floats>> resultats
    + ajouterNote(String, Floats)
    + calculMoyenne(String): Floats
    + calculMoyenne(): Floats
}

class Identite {
    -String NIP
    -String prenom
    -String nom
}

class Formation {
    -List<String> matiere
    -Map<String, Int> coefficients
    +void ajouterMatiere(String)
    +void supprimerMatiere(String)
    +float coefMatiere(String)
    +boolean contientMatiere
}

class Groupe {
}

Etudiant "1" --> "1" Identite : - id
Etudiant "*" --> "1..*" Formation : - formation
Groupe "1" --> "1..*" Etudiant : - etudiants
Groupe "*" --> "1" Formation : - formation


@enduml